--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,6 @@ body {
     height: 100vh;
     margin: 0;
 }
-
 .outer-container {
     display: flex;
     justify-content: center;
@@ -15,7 +14,6 @@ body {
     height: 100vh;
     width: 100%;
 }
-
 .container {
     background: #fff;
     padding: 20px;
@@ -26,13 +24,11 @@ body {
     flex-direction: column;
     height: 600px;
 }
-
 .chat-header {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
 }
-
 .chatbot-img {
     width: 40px;
     height: 40px;
@@ -61,7 +57,6 @@ body {
     align-items: center;
     margin-bottom: 10px;
 }
-
 #userInput {
     width: calc(80% - 10px);    
     padding: 10px;
@@ -82,7 +77,6 @@ button {
 button:hover {
     background: #474747bc;
 }
-
 .userMessage, .botMessage {
     display: flex;
     align-items: flex-start;
@@ -92,7 +86,6 @@ button:hover {
 .userMessage {
     justify-content: flex-end;
 }
-
 .botMessage {
     justify-content: flex-start;
 }
@@ -113,13 +106,51 @@ button:hover {
     background: #eee;
     margin-right: 10px;
 }
-
 .user-img, .bot-img {
     width: 30px;
     height: 30px;
     border-radius: 50%;
 }
-
 .user-img{
     margin-left: 5px;
+}
+
+/* responsive down to 600px */
+@media (max-width: 600px) {
+    .container {
+        width: 100%;
+        height: 100vh;
+        border-radius: 0;
+        padding: 10px;
+        box-shadow: none;
+    }
+    #userInput {
+        width: calc(70% - 10px);
+    }
+    button {
+        padding: 10px;
+    }
+    .chat-header h2 {
+        font-size: 16px;
+    }
+
+    .userMessage .text, .botMessage .text {
+        max-width: 80%;
+        font-size: 12px;
+    }
+    .chatbot-img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .user-img, .bot-img {
+        width: 25px;
+        height: 25px;
+    }
+    .userMessage .text {
+        margin-left: 5px;
+    }
+    .botMessage .text {
+        margin-right: 5px;
+    }
 }
